--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "logs",
+  "name": "@juan-estevez/logs",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "rm -rf dist/ && tsc",
-    "test": "npm run build && jest --coverage",
-    "patch": "npm run upgrade && npm run build && npm version patch && npm publish"
+    "test": "npm run build && jest --coverage"
   },
   "repository": {
     "type": "git",
